<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLayout"
        tools:context=".ui.RegisterActivity">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_edittext_rounded"
            android:fontFamily="@font/roboto"
            android:hint="@string/email"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/colorEdittext"
            android:textColor="@color/colorEdittext"
            app:layout_constraintEnd_toEndOf="@+id/etName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/etName"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_edittext_rounded"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/colorEdittext"
            android:textColor="@color/colorEdittext"
            app:layout_constraintEnd_toEndOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_button_rounded"
            android:fontFamily="@font/roboto"
            android:text="@string/register"
            android:textColor="@color/colorTextButton"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/btImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:text="@string/picture"
            android:background="@drawable/shape_image_user_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_edittext_rounded"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/colorEdittext"
            android:textColor="@color/colorEdittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btImage"
            tools:ignore="Autofill" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorBackgroundButton"
            android:background="@drawable/shape_image_user_rounded"
            app:layout_constraintBottom_toBottomOf="@+id/btImage"
            app:layout_constraintEnd_toEndOf="@+id/btImage"
            app:layout_constraintStart_toStartOf="@+id/btImage"
            app:layout_constraintTop_toTopOf="@+id/btImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>